refactor: update resourse
